# uiop-chat

./: Cargo.toml  README.md  default.nix  flake.nix
src/: app.rs  args.rs  client.rs  codec.rs  config.rs  console.rs  controller.rs  lib.rs  logger.rs  main.rs  protocol.rs  test.rs
src/app/: crossterm_backend.rs  event.rs  main.rs  mod.rs  mode.rs  state.rs
