[package]
name = "uiop-dsp"
version = "0.1.0"
edition = "2024"
default-run = "uiop-chat"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["derive"] }
env_logger = "0.11.7"
log = "0.4.26"
nom = "8.0.0"
strum = "0.27.1"
strum_macros = "0.27.1"
tokio = { version = "1.44.1", features = ["full"] }

[[bin]]
name = "uiop-chat"
path = "src/main.rs"

[[bin]]
name = "test"
path = "src/test.rs"
